--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.19.1",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "method-override": "^3.0.0",
     "mongoose": "^6.1.7"
   }
 }
