--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
     "nodemon": "^2.0.15",
     "prettier": "2.5.1"
   },
-  "name": "pcat",
+  "name": "cleanblog",
   "description": "\"# PCAT\"",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app"
+    "start": "node app"
   },
   "repository": {
     "type": "git",
